// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The filterable table renders extra filters 1`] = `
Array [
  <div
    className="jsx-1046249322"
  >
    <input
      name="myExtraFilter"
      onChange={[Function]}
    />
  </div>,
  <ForwardRef
    bordered={true}
    className="search-table"
    hover={true}
    striped={true}
  >
    <table
      className="search-table table table-striped table-bordered table-hover"
    >
      <thead
        className="jsx-1046249322"
      >
        <tr
          className="jsx-1046249322"
        />
        <tr
          className="jsx-870174952"
          onKeyDown={[Function]}
        >
          <td
            className="jsx-870174952 flex"
          >
            <Button
              active={false}
              disabled={false}
              onClick={[Function]}
              variant="outline-secondary"
            >
              <button
                className="btn btn-outline-secondary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Clear
              </button>
            </Button>
            <Button
              active={false}
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "marginLeft": "5px",
                }
              }
              variant="primary"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "marginLeft": "5px",
                  }
                }
                type="button"
              >
                Apply
              </button>
            </Button>
          </td>
        </tr>
      </thead>
      <tbody />
    </table>
  </ForwardRef>,
  <Col
    md={
      Object {
        "offset": 3,
        "span": 6,
      }
    }
  >
    <div
      className="col-md-6 offset-md-3"
    >
      <Alert
        closeLabel="Close alert"
        id="no-search-results"
        show={true}
        transition={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "displayName": "Fade",
            "render": [Function],
          }
        }
        variant="secondary"
      >
        <Fade
          appear={false}
          id="no-search-results"
          in={true}
          mountOnEnter={false}
          timeout={300}
          unmountOnExit={true}
        >
          <div
            className="fade alert alert-secondary show"
            id="no-search-results"
            role="alert"
          >
            No matching results to show.
          </div>
        </Fade>
      </Alert>
    </div>
  </Col>,
  "",
]
`;

exports[`The filterable table renders filter headers 1`] = `
<Fragment>
  <div
    className="jsx-1046249322"
  />
  <ForwardRef
    bordered={true}
    className="search-table"
    hover={true}
    striped={true}
  >
    <thead
      className="jsx-1046249322"
    >
      <tr
        className="jsx-1046249322"
      >
        <SortableTableHeader
          headerVariables={
            Object {
              "columnName": "text_column",
              "displayName": "TextTitle",
              "sortable": true,
            }
          }
          key="TextTitle-sortHeader"
        />
        <SortableTableHeader
          headerVariables={
            Object {
              "columnName": null,
              "displayName": "DisplayOnlyTitle",
              "sortable": true,
            }
          }
          key="DisplayOnlyTitle-sortHeader"
        />
      </tr>
      <FilterableTableFilterRow
        filterArgs={Object {}}
        filters={
          Array [
            TextFilter {
              "Component": [Function],
              "argName": "text_column",
              "castValue": [Function],
              "isSearchEnabled": true,
              "isSortEnabled": true,
              "removeSearchHeader": undefined,
              "sortColumnName": "text_column",
              "title": "TextTitle",
            },
            DisplayOnlyFilter {
              "Component": [Function],
              "argName": null,
              "castValue": [Function],
              "isSearchEnabled": true,
              "isSortEnabled": true,
              "removeSearchHeader": undefined,
              "sortColumnName": null,
              "title": "DisplayOnlyTitle",
            },
          ]
        }
        onSubmit={[Function]}
      />
    </thead>
    <tbody />
  </ForwardRef>
  <Col
    md={
      Object {
        "offset": 3,
        "span": 6,
      }
    }
  >
    <Alert
      closeLabel="Close alert"
      id="no-search-results"
      show={true}
      transition={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "appear": false,
            "in": false,
            "mountOnEnter": false,
            "timeout": 300,
            "unmountOnExit": false,
          },
          "displayName": "Fade",
          "render": [Function],
        }
      }
      variant="secondary"
    >
      No matching results to show.
    </Alert>
  </Col>
  <JSXStyle
    id="1046249322"
  >
    .search-table{text-align:center;}.master-select{background:#003366;color:white;min-width:6em;position:relative;}.master-select label{margin-bottom:0;padding-right:24px;width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;position:absolute;top:0;right:0;bottom:0;left:0;}.master-select input[type='checkbox']{position:absolute;right:10px;top:calc(50% - 6px);}.search-table.loading td{opacity:0;pointer-events:none;}.search-table.loading tbody{position:relative;}.search-table.loading tbody::after{width:2rem;height:2rem;vertical-align:text-bottom;background-color:black;border-radius:50%;opacity:0;content:'';position:absolute;top:50%;left:50%;-webkit-animation:spinner-grow 0.75s linear infinite;animation:spinner-grow 0.75s linear infinite;}#no-search-results{text-align:center;}
  </JSXStyle>
</Fragment>
`;

exports[`The filterable table renders sort headers 1`] = `
<Fragment>
  <div
    className="jsx-1046249322"
  />
  <ForwardRef
    bordered={true}
    className="search-table"
    hover={true}
    striped={true}
  >
    <thead
      className="jsx-1046249322"
    >
      <tr
        className="jsx-1046249322"
      >
        <SortableTableHeader
          headerVariables={
            Object {
              "columnName": "text_column",
              "displayName": "TextTitle",
              "sortable": true,
            }
          }
          key="TextTitle-sortHeader"
        />
        <SortableTableHeader
          headerVariables={
            Object {
              "columnName": null,
              "displayName": "DisplayOnlyTitle",
              "sortable": true,
            }
          }
          key="DisplayOnlyTitle-sortHeader"
        />
      </tr>
      <FilterableTableFilterRow
        filterArgs={Object {}}
        filters={
          Array [
            TextFilter {
              "Component": [Function],
              "argName": "text_column",
              "castValue": [Function],
              "isSearchEnabled": true,
              "isSortEnabled": true,
              "removeSearchHeader": undefined,
              "sortColumnName": "text_column",
              "title": "TextTitle",
            },
            DisplayOnlyFilter {
              "Component": [Function],
              "argName": null,
              "castValue": [Function],
              "isSearchEnabled": true,
              "isSortEnabled": true,
              "removeSearchHeader": undefined,
              "sortColumnName": null,
              "title": "DisplayOnlyTitle",
            },
          ]
        }
        onSubmit={[Function]}
      />
    </thead>
    <tbody />
  </ForwardRef>
  <Col
    md={
      Object {
        "offset": 3,
        "span": 6,
      }
    }
  >
    <Alert
      closeLabel="Close alert"
      id="no-search-results"
      show={true}
      transition={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "appear": false,
            "in": false,
            "mountOnEnter": false,
            "timeout": 300,
            "unmountOnExit": false,
          },
          "displayName": "Fade",
          "render": [Function],
        }
      }
      variant="secondary"
    >
      No matching results to show.
    </Alert>
  </Col>
  <JSXStyle
    id="1046249322"
  >
    .search-table{text-align:center;}.master-select{background:#003366;color:white;min-width:6em;position:relative;}.master-select label{margin-bottom:0;padding-right:24px;width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;position:absolute;top:0;right:0;bottom:0;left:0;}.master-select input[type='checkbox']{position:absolute;right:10px;top:calc(50% - 6px);}.search-table.loading td{opacity:0;pointer-events:none;}.search-table.loading tbody{position:relative;}.search-table.loading tbody::after{width:2rem;height:2rem;vertical-align:text-bottom;background-color:black;border-radius:50%;opacity:0;content:'';position:absolute;top:50%;left:50%;-webkit-animation:spinner-grow 0.75s linear infinite;animation:spinner-grow 0.75s linear infinite;}#no-search-results{text-align:center;}
  </JSXStyle>
</Fragment>
`;

exports[`The filterable table renders the table body 1`] = `
<Fragment>
  <div
    className="jsx-1046249322"
  />
  <ForwardRef
    bordered={true}
    className="search-table"
    hover={true}
    striped={true}
  >
    <thead
      className="jsx-1046249322"
    >
      <tr
        className="jsx-1046249322"
      />
      <FilterableTableFilterRow
        filterArgs={Object {}}
        filters={Array []}
        onSubmit={[Function]}
      />
    </thead>
    <tbody>
      <tr>
        <td>
          this is a test body
        </td>
      </tr>
    </tbody>
  </ForwardRef>
  <Col
    md={
      Object {
        "offset": 3,
        "span": 6,
      }
    }
  >
    <Alert
      closeLabel="Close alert"
      id="no-search-results"
      show={true}
      transition={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "appear": false,
            "in": false,
            "mountOnEnter": false,
            "timeout": 300,
            "unmountOnExit": false,
          },
          "displayName": "Fade",
          "render": [Function],
        }
      }
      variant="secondary"
    >
      No matching results to show.
    </Alert>
  </Col>
  <JSXStyle
    id="1046249322"
  >
    .search-table{text-align:center;}.master-select{background:#003366;color:white;min-width:6em;position:relative;}.master-select label{margin-bottom:0;padding-right:24px;width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;position:absolute;top:0;right:0;bottom:0;left:0;}.master-select input[type='checkbox']{position:absolute;right:10px;top:calc(50% - 6px);}.search-table.loading td{opacity:0;pointer-events:none;}.search-table.loading tbody{position:relative;}.search-table.loading tbody::after{width:2rem;height:2rem;vertical-align:text-bottom;background-color:black;border-radius:50%;opacity:0;content:'';position:absolute;top:50%;left:50%;-webkit-animation:spinner-grow 0.75s linear infinite;animation:spinner-grow 0.75s linear infinite;}#no-search-results{text-align:center;}
  </JSXStyle>
</Fragment>
`;
